fixed visibility of top 'main' section content
added top margin

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -82,6 +82,10 @@
     display: none;
 }
 
+.main-top-margin{
+    margin-top: 100px;
+}
+
 @media (max-width: 768px) {
     .preview-image {
         position: absolute;
